[tool.poetry]
name = "claude-engineer"
version = "0.0.0"
description = "interactive CLI that leverages the power of Anthropic's Claude-3.5-Sonnet model to assist with software development tasks"
authors = ["Doriandarko"]
readme = "readme.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
anthropic = "^0.34.0"
python-dotenv = "^1.0.1"
tavily-python = "^0.4.0"
pillow = "^10.4.0"
rich = "^13.7.1"
aiohttp = "^3.10.3"
prompt-toolkit = "^3.0.47"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
